2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetPropertyTreeBackend.cs: Added missing null check.

2007-07-27  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: Added null check.
	* libsteticui/PluggableWidget.cs: When updating the child widget, do
	  not add it to the notebook if it is already a child of the
	  notebook.
	* libstetic/wrapper/pixmaps/comboentry.png,
	  libstetic/wrapper/pixmaps/iconview.png, libstetic/libstetic.mdp,
	  libstetic/Makefile.am: Added some missing icons.
	* libstetic/wrapper/Widget.cs, libstetic/wrapper/objects.xml: Fixed
	  some issues with HasDefault. It can only be assigned when the
	  widget already has a parent.
	* libstetic/TypedClassDescriptor.cs: Report icon loading errors.

2007-07-20  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Make DeleteSelection work for
	  placeholders.
	* libsteticui/WidgetEditSession.cs, libsteticui/Component.cs,
	  libsteticui/WidgetDesigner.cs, libsteticui/WidgetComponent.cs:
	  Moved all clipboard checking properties to WidgetDesigner.

2007-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Project.cs: Fixes on ActionGroup management.

2007-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupToolbar.cs: Notify group changes to the
	  frontend.
	* libsteticui/ActionGroupEditSession.cs: Don't delay the creation of
	  the designer because when used in combination with the widget
	  designer, change events are subscribed since the begining

2007-07-10  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: Fix NRE (bug #82052).

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/ActionMenuItem.cs,
	  libstetic/editor/ActionToolItem.cs: Show menu items and tool
	  buttons insensitive when bound to an insensitive action. Fixes bug
	  #81810.

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectViewBackend.cs: Cosmetic fixes.
